--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,27 @@
   color: #61dafb;
 }
 
+main {
+  flex-grow: 1;
+  text-align: center;
+  padding: 25px;
+}
+
+footer {
+  padding: 4px;
+  min-height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #86cee0;
+  font-size: small;
+  text-align: center;
+}
+
+header {
+  padding: 40px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +57,4 @@
     transform: rotate(360deg);
   }
 }
+
